# MarkdownRenderEngine

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.html  README.md  THIRD_PARTY_NOTICES.md  compile_flags.txt  comprehensive_test.html  comprehensive_test.md
apps/mwrender/: main.cpp
cmake/: MWRenderConfig.cmake.in  builtin_resources.hpp.in  builtin_theme.hpp.in
docs/: AST_SPEC.md  Architecture.md  CLI_USAGE.md  CODE_QUALITY_REVIEW.md  Compatibility.md  DevelopmentGuide.md  EDITOR_CORE_DESIGN.md  INCREMENTAL_PARSING.md  INTEGRATION.md  ImplementationPlan.md  MarkdownRenderEngine_EditorCore_Development_Plan.md  PLAN.md  RELEASE_CHECKLIST.md  RENDER_PATCH_PROTOCOL.md  SECURITY.md  SOURCE_READING_GUIDE.md  THEME_SPEC.md  USER_GUIDE.md
docs/archive/: DetailedPlan.md  EDITOR_PROJECTION_skeletal.md  ROADMAP_v0.1.md  UPDATE_root_old.md  UPDATE_transition_guide.md  editor_core_roadmap_architecture.md  scratch_task_1.md  scratch_task_2.md  scratch_task_b.md
docs/core/: api.md  architecture.md  code_quality_review_2026-06-15.md  features.md
docs/editor/: README.md  commands.md  design.md  protocol.md  selection.md
docs/guides/: integration.md  integration_plan_qt_demo.md  source_reading.md
docs/specs/: compatibility.md  html.md
examples/: CMakeLists.txt  Comprehensive_Markdown_Test.md  api_example.cpp  basic.md  custom.css  full-demo.md  html.md  mwrender.json  table.md  theme.md  ultimate-markdown-stress.md
examples/sandbox/: comprehensive_test.md  test_style.css
include/mwrender/: ast.hpp  diagnostics.hpp  engine.hpp  incremental.hpp  mwrender.hpp  options.hpp  outline.hpp  parser.hpp  query.hpp  result.hpp  sanitizer.hpp  serializer.hpp  source.hpp  source_map.hpp  stats.hpp  theme.hpp  utf.hpp  version.hpp
include/mwrender/editor/: block_index.hpp  document_session.hpp  edit_command.hpp  editor_projection.hpp  node_id_registry.hpp  render_patch.hpp  selection_map.hpp
src/: engine.cpp  sanitizer.cpp
src/analysis/: document_analysis.cpp  document_analysis.hpp
src/editor/: block_index.cpp  document_session.cpp  edit_command.cpp  editor_projection.cpp  node_id_registry.cpp  render_patch.cpp  selection_map.cpp
src/parser/: parser.cpp
src/query/: query.cpp  source_map.cpp
src/render/: html_renderer.cpp  html_renderer.hpp
src/serializer/: serializer.cpp
src/support/: document_text.cpp  document_text.hpp  json.cpp  json.hpp
src/theme/: theme_manager.cpp  theme_manager.hpp
tests/: benchmark.cpp  cli_stdin_test.cmake  comprehensive_test.cpp  conformance_test.cpp  edge_test.cpp  new_features_test.cpp  security_test.cpp  serialized_output.md  smoke_test.cpp  snapshot_test.cpp  stress_test.cpp
tests/editor/: atomic_blocks_test.cpp  block_index_test.cpp  document_session_test.cpp  edit_command_test.cpp  editor_benchmark.cpp  editor_projection_test.cpp  editor_stress_test.cpp  incremental_parse_test.cpp  large_document_test.cpp  node_id_registry_test.cpp  render_patch_test.cpp  selection_map_test.cpp  unicode_test.cpp
tests/serializer/: serializer_test.cpp
tests/snapshots/: blocks.md  document.md  gfm.md  inline.md
themes/github-light/: README.md  content.css  theme.json
tools/: embed.cpp
